correcting body dark mode

--- a/assets/blog.css
+++ b/assets/blog.css
@@ -1,6 +1,12 @@
 body {
   background-color: #efd8d4;
 }
+body.dark-mode {
+  background-color: #333;
+  color: #fff;
+}
+
+body.dark-mode footer,
 body.dark-mode .custom-footer {
   background-color: #333;
   color: #fff;
